auth: remove payroll access from secretary

--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -181,6 +181,7 @@
                         </li>
                     {% endif %}
                     
+                    {% if current_user.role.name in ['Admin', 'Partner', 'Manager'] %}
                     <li>
                         <a id="li_cash_flow" href="{{url_for('lms.cash_flow')}}" class="">
                             <i class="metismenu-icon pe-7s-refresh-2 icon-gradient bg-premium-dark" aria-hidden="true"></i>
@@ -194,6 +195,7 @@
                             Payroll
                         </a>
                     </li>
+                    {% endif %}
                 {% endif %}
 
                 {% if current_user.role.name in ['Admin', 'Secretary', 'Partner', 'Manager'] %}
