feat: Add remarks to create_expenses

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -175,6 +175,14 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    <div class="position-relative form-group"><label for="expenses_remarks" class="">Remarks</label>
+                                        <input name="expenses_remarks" id="expenses_remarks" type="text"
+                                            class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
