feat: transaction delete

--- a/prime_admin/templates/lms/fund_wallet/components/fund_wallet_statements.html
+++ b/prime_admin/templates/lms/fund_wallet/components/fund_wallet_statements.html
@@ -37,6 +37,7 @@
             class="align-middle mb-0 table table-bordered table-striped table-hover">
             <thead>
                 <tr>
+                    <th class="text-center" style="display:None;"></th>
                     <th class="text-center">DATE</th>
                     <th class="text-center">CATEGORY</th>
                     <th class="text-center">DESCRIPTION</th>
@@ -46,6 +47,7 @@
                     <th class="text-center">RUNNING BALANCE</th>
                     <th class="text-center">WHO</th>
                     <th class="text-center">REMARKS</th>
+                    <th class="text-center">ACTIONS</th>
                 </tr>
             </thead>
             <tbody>
