--- a/prime_admin/templates/lms/cash_flow_view_modal.html
+++ b/prime_admin/templates/lms/cash_flow_view_modal.html
@@ -14,12 +14,15 @@
                         <table id="tbl_payment_history" class="mb-0 table">
                             <thead>
                             <tr>
+                                <th class="text-center">ID</th>
+                                <th class="text-center">RECEIPT PATH</th>
                                 <th class="text-center">DATE</th>
                                 <th class="text-center">PAYMENT BY</th>
                                 <th class="text-center">AMOUNT</th>
                                 <th class="text-center">THRU</th>
                                 <th class="text-center">REFERENCE NO.</th>
                                 <th class="text-center">PAYMENT MODE</th>
+                                <th class="text-center">ACTIONS</th>
                             </tr>
                             </thead>
                             <tbody>
