feat: student records upload receipt

--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -188,11 +188,14 @@
                         <table id="tbl_payment_history" class="mb-0 table">
                             <thead>
                             <tr>
+                                <th class="text-center">PAYMENT ID</th>
+                                <th class="text-center">RECEIPT PATH</th>
                                 <th class="text-center">AMOUNT</th>
                                 <th class="text-center">CURRENT BALANCE</th>
                                 <th class="text-center">DATE</th>
                                 <th class="text-center">REMARKS</th>
                                 <th class="text-center">DEPOSITED</th>
+                                <th class="text-center">ACTIONS</th>
                             </tr>
                             </thead>
                             <tbody>
