--- a/prime_admin/templates/lms/student_records/student_records.html
+++ b/prime_admin/templates/lms/student_records/student_records.html
@@ -3,6 +3,7 @@
 
 {% block modals %}
 {% include "lms/client_view_modal.html" %}
+{% include "lms/student_records/registered_students/modals/upload_receipt_modal.html" %}
 {% include "lms/client_edit_modal.html" %}
 {% include "lms/agreement_form_settings_modal.html" %}
 {% include "lms/print_certificate_modal.html" %}
@@ -157,6 +158,24 @@
             }
         });
 
+        var dtPaymentHistory = $('#tbl_payment_history').DataTable({
+            "dom": 'rtip',
+            "pageLength": 50,
+            "order": [[1, 'asc']],
+            "autoWidth": false,
+            "ordering": false,
+            "columnDefs": [
+                {"targets": 0, "visible": false},
+                {"targets": 1, "visible": false},
+                {
+                    "targets": 7,
+                    "render": function (data, type, row){
+                        return '<button data-toggle="modal" data-target="#mdl_upload_receipt" type="button" class="btn btn-info btn-receipt">View Receipt</button>'; 
+                    }
+                }
+            ]
+        });
+
         $('#tbl_members tbody').on('click', '.btn-edit', function () {
             var data = table.row($(this).parents('tr')).data();
 
@@ -267,18 +286,19 @@
                     $("#view_registration_no").val(response.data.registration_no);
                     $("#view_reviewers").val(response.data.reviewers);
 
-                    $("#tbl_payment_history > tbody").empty();
+                    dtPaymentHistory.clear().draw();
 
                     for (i = 0; i < response.data.payments.length; i++) {
-                        $('#tbl_payment_history > tbody:first').append(
-                            `<tr>
-                            <td class="text-center">${response.data.payments[i].amount}</td>
-                            <td class="text-center">${response.data.payments[i].current_balance}</td>
-                            <td class="text-center">${response.data.payments[i].date}</td>
-                            <td class="text-center">${response.data.payments[i].remarks}</td>
-                            <td class="text-center">${response.data.payments[i].deposited}</td>
-                            </tr>`
-                        );
+                        dtPaymentHistory.row.add([
+                            response.data.payments[i].payment_id,
+                            response.data.payments[i].receipt_path,
+                            response.data.payments[i].amount,
+                            response.data.payments[i].current_balance,
+                            response.data.payments[i].date,
+                            response.data.payments[i].remarks,
+                            response.data.payments[i].deposited,
+                            ''
+                        ]).draw();
                     }
 
                     if (response.data.mode_of_payment == "refund") {
@@ -854,6 +874,39 @@
                 $(this).val('show');
             }
         });
+
+        $('#tbl_payment_history tbody').on('click', '.btn-receipt', function(){
+            var data = dtPaymentHistory.row($(this).parents('tr')).data();
+            let paymentId = data[0];
+            let receiptPath = data[1];
+
+            $("#receipt_payment_id").val(paymentId);
+            $("#img_receipt").attr("src", receiptPath);
+        });
+
+        $("#frm_upload_receipt").submit(function(e){
+            e.preventDefault();
+            let formData = new FormData($(this)[0]);
+
+            $.ajax({
+                url: '/learning-management/upload-receipt',
+                type: 'POST',
+                data: formData,
+                async: false,
+                cache: false,
+                contentType: false,
+                enctype: 'multipart/form-data',
+                processData: false,
+                success: function (response) {
+                    swal("Success!", "Receipt uploaded successfully!", "success");
+                },
+                error: function (response) {
+                    swal("Error Occured!", response.responseJSON.message, "error");
+                },
+             });
+             return false;
+        });
+
 
         // call this before showing SweetAlert:
         function fixBootstrapModal() {
