--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="frm_deposit" action="{{url_for('lms.deposit')}}" method="POST" novalidate>
+                <form id="frm_deposit" action="{{url_for('lms.deposit')}}" method="POST" enctype="multipart/form-data" novalidate>
                     <div class="main-card mb-3 card">
                         <div class="card-body">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
@@ -101,6 +101,14 @@
                                     <div class="position-relative form-group"><label for="remarks"
                                             class="">Remarks</label><input name="remarks" id="remarks" type="text"
                                             class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    <div class="position-relative form-group"><label for="receipt_file" class="">Receipt</label>
+                                        <input name="receipt_file" type="file" accept="image/*" class="form-control-file" required>
+                                        <small class="form-text text-muted">Upload Receipt File. Valid file types: PNG or JPEG</small>
                                     </div>
                                 </div>
                             </div>
