--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -128,6 +128,22 @@
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group">
+                                        <label for="payment_method" class="">Payment Method</label>
+                                        <select name="payment_method" id="payment_method" class="form-control" required>
+                                            <option value="">Choose...</option>
+                                            <option value="ONLINE">ONLINE</option>
+                                            <option value="OTC">OTC</option>
+                                        </select>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                        <div class="invalid-feedback">
+                                            Please provide a thru
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="position-relative form-group">
                                         <label for="thru" class="">Thru</label>
                                         <select name="thru" id="thru" class="form-control" required>
                                             <option value="">Choose...</option>
@@ -152,6 +168,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group">
                                         <label for="reference_no" class="">Reference No.</label>
