feat: add branch in payslips

--- a/prime_admin/templates/lms/payroll/payroll_page.html
+++ b/prime_admin/templates/lms/payroll/payroll_page.html
@@ -184,6 +184,7 @@
                             <thead>
                                 <tr>
                                     <th class="text-center">DATE</th>
+                                    <th class="text-center">BRANCH</th>
                                     <th class="text-center">NAME OF EMPLOYEE</th>
                                     <th class="text-center">CUT OF DATE</th>
                                     <th class="text-center">GROSS SALARY</th>
